added php page to view database query results

--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
                             </form>
                         </div>
                         <div class="index-form-greeter">
-                            <div class="greeter-content greeter-bottom-text">this is a test application to demonstrate the usage of html forms, php files and mySQL databases.</div>
+                            <div class="greeter-content greeter-bottom-text">click <a class="signup-link" href="./results.php">here</a> to view the database content</div>
+                        </div>
+
+                        <div class="index-form-greeter">
+                            <div class="greeter-content greeter-bottom-text">This is a test application to demonstrate the usage of html forms, php files and mySQL databases.</div>
+                            <div class="greeter-content greeter-bottom-text">view source on <a class="signup-link  icon icon-git" href="https://github.com/tziegler-tud/php-test">github</a></div>
                         </div>
                     </div>
                 </div>
